--- a/requirements/requirements-cpu.txt
+++ b/requirements/requirements-cpu.txt
@@ -8,7 +8,7 @@ torch==2.2.0
 torchvision==0.17.0
 
 # Medical Imaging
-monai[all]==1.3.2  # CRITICAL: Do not upgrade to 1.5.x (breaks SwinUNETR)
+monai==1.3.2  # CRITICAL: Do not upgrade to 1.5.x (breaks SwinUNETR). CPU-only, without [all] extras
 SimpleITK==2.3.1
 pydicom==2.4.4
 nibabel==5.2.0
