--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -49,6 +49,8 @@ jobs:
           pip download -r requirements/requirements-cpu.txt -d wheels/ --platform win_amd64 --only-binary=:all:
 
       - name: Download AI-CAC model
+        continue-on-error: true
+        id: download_model
         run: |
           New-Item -ItemType Directory -Force -Path models
           pip install gdown
@@ -56,12 +58,16 @@ jobs:
 
       - name: Verify model download
         run: |
-          if (!(Test-Path models/va_non_gated_ai_cac_model.pth)) {
-            Write-Error "Model file not found!"
-            exit 1
+          if (Test-Path models/va_non_gated_ai_cac_model.pth) {
+            $size = (Get-Item models/va_non_gated_ai_cac_model.pth).Length / 1MB
+            Write-Output "Model size: $size MB"
+            Write-Output "MODEL_INCLUDED=true" >> $env:GITHUB_ENV
+          } else {
+            Write-Warning "Model file not found! Package will be created without model."
+            Write-Warning "Users will need to download the model separately."
+            Write-Output "MODEL_INCLUDED=false" >> $env:GITHUB_ENV
+            New-Item -ItemType File -Path models/.gitkeep -Force
           }
-          $size = (Get-Item models/va_non_gated_ai_cac_model.pth).Length / 1MB
-          Write-Output "Model size: $size MB"
 
       - name: Create package structure
         run: |
@@ -73,9 +79,39 @@ jobs:
           # Copy dependencies
           Copy-Item -Recurse wheels package/cardiac-ai-cac/dependencies
 
-          # Copy model
+          # Copy model (if available)
           New-Item -ItemType Directory -Force -Path package/cardiac-ai-cac/models
-          Copy-Item models/va_non_gated_ai_cac_model.pth package/cardiac-ai-cac/models/
+          if (Test-Path models/va_non_gated_ai_cac_model.pth) {
+            Copy-Item models/va_non_gated_ai_cac_model.pth package/cardiac-ai-cac/models/
+          } else {
+            # Create README for manual model download
+            @"
+# AI Model Download Instructions
+
+The AI-CAC model file was not included in this package.
+
+## Manual Download Required
+
+Please download the model manually from Google Drive:
+- Google Drive: https://drive.google.com/file/d/1uD12kphnWlJ5R6K-mDQnxS8LjYhPGSfm/view
+- File size: ~1.2GB (1,181 MB)
+- Filename: va_non_gated_ai_cac_model.pth
+
+## Installation Steps
+
+1. Download the model file from the link above
+2. Place it in this directory: `models/va_non_gated_ai_cac_model.pth`
+3. Verify the file is named exactly: `va_non_gated_ai_cac_model.pth`
+
+## Alternative: Use gdown
+
+If you have gdown installed:
+``````
+pip install gdown
+gdown 1uD12kphnWlJ5R6K-mDQnxS8LjYhPGSfm -O models/va_non_gated_ai_cac_model.pth
+``````
+"@ | Out-File -FilePath package/cardiac-ai-cac/models/DOWNLOAD_MODEL.md
+          }
 
           # Copy documentation
           Copy-Item README.md package/cardiac-ai-cac/
