fix: exclude symlink to external AI-CAC during package copy
The src/cardiac_calcium_scoring/external/AI-CAC symlink points to
vendors/AI-CAC which is an external dependency not tracked in the
release repository. Excluding it from package builds.

Windows: Use -Exclude parameter with Copy-Item
Linux: Remove symlink after copy with rm -f

This fixes the build error: 'Could not find a part of the path AI-CAC'

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -72,8 +72,9 @@ jobs:
         run: |
           mkdir -p package/cardiac-ai-cac
 
-          # Copy source code
+          # Copy source code (exclude symlinks to external dependencies)
           cp -r src/* package/cardiac-ai-cac/
+          rm -f package/cardiac-ai-cac/cardiac_calcium_scoring/external/AI-CAC
 
           # Copy dependencies
           cp -r wheels package/cardiac-ai-cac/dependencies
