fix: resolve file locking issue in checksum generation
Split Get-ChildItem pipeline into two steps to avoid race condition
where Export-Csv tries to access SHA256SUMS.csv while it's being
written to by the same pipeline.

Before: Get-ChildItem | Get-FileHash | Export-Csv
After: Store in variable first, then export to CSV

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -207,7 +207,8 @@ jobs:
       - name: Generate checksums
         run: |
           cd package/cardiac-ai-cac
-          Get-ChildItem -Recurse -File | Get-FileHash -Algorithm SHA256 | Select-Object Hash, Path | Export-Csv -Path SHA256SUMS.csv -NoTypeInformation
+          $hashes = Get-ChildItem -Recurse -File | Get-FileHash -Algorithm SHA256 | Select-Object Hash, Path
+          $hashes | Export-Csv -Path SHA256SUMS.csv -NoTypeInformation
 
       - name: Compress package
         run: |
